partman-base (117) UNRELEASED; urgency=low

  * Don't emit confusing log messages if partman-lvm or partman-crypto are
    already loaded.

 -- Colin Watson <cjwatson@debian.org>  Fri, 29 Feb 2008 10:50:51 +0000

partman-base (116) unstable; urgency=low

  [ Stephen R. Marenka ]
  * m68k: don't make partman uninstallable for atari

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * French (fr.po) by Christian Perrier
  * Hindi (hi.po) by Kumar Appaiah
  * Hungarian (hu.po) by SZERVÁC Attila
  * Indonesian (id.po) by Arief S Fitrianto
  * Central Khmer (km.po) by Khoem Sokhem
  * Kurdish (ku.po) by Erdal Ronahi
  * Latvian (lv.po) by Viesturs Zarins
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Slovenian (sl.po) by Matej Kovacic
  * Turkish (tr.po) by Recai Oktaş
  * Ukrainian (uk.po)
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 15:34:54 -0200

partman-base (115) unstable; urgency=low

  * Major whitespace cleanup and a few minor coding style fixes.
  * Move functions confirm_changes and commit_changes from base.sh to new
    function library commit.sh.
  * Clean up the old_devices directory when it's no longer needed.
  * commit.d/parted: ensure that we clean up obsolete partition directories
    in the partition's device directory when we commit changes to a device by
    calling the new function device_cleanup_partitions() in commit.sh.

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Korean (ko.po) by Changwoo Ryu
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ

 -- Frans Pop <fjp@debian.org>  Sat, 29 Dec 2007 22:11:36 +0100

partman-base (114) unstable; urgency=low

  * Move definitions.sh to ./lib/base.sh. Temporarily provide a symlink to the
    old location to ease the transition.