@@ -2,6 +2,9 @@ partman-base (117) UNRELEASED; urgency=low
 
   * Don't emit confusing log messages if partman-lvm or partman-crypto are
     already loaded.
+  * Support preseeding questions asked through ask_user using the name of
+    the plugin responsible for the answer you want (e.g.
+    partman-auto/init_automatically_partition=biggest_free).
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 29 Feb 2008 10:50:51 +0000
 
